# cbadv-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml.sample  custom_config.toml.sample
examples/: README.md  account_api.rs  all.rs  convert_api.rs  custom_config.rs  data_api.rs  fee_api.rs  order_api.rs  payment_api.rs  portfolio_api.rs  product_api.rs  public_api.rs  sandbox_api.rs  util_api.rs  watch_candles.rs  websocket.rs  websocket_user.rs
src/: account.rs  candle_watcher.rs  cbadv.rs  client.rs  config.rs  constants.rs  errors.rs  fee.rs  http_agent.rs  jwt.rs  lib.rs  macros.rs  main.rs  order.rs  product.rs  rest.rs  signer.rs  task_tracker.rs  time.rs  token_bucket.rs  traits.rs  types.rs  utils.rs  websocket.rs
src/apis/: account.rs  convert.rs  data.rs  fee.rs  mod.rs  order.rs  payment.rs  portfolio.rs  product.rs  public.rs  util.rs
src/cbadv/: account.rs  client.rs  fee.rs  order.rs  product.rs  time.rs  utils.rs
src/models/: account.rs  convert.rs  data.rs  fee.rs  mod.rs  order.rs  payment.rs  portfolio.rs  product.rs  public.rs  shared.rs  util.rs  websocket.rs
src/models/order/: builders.rs  enums.rs  mod.rs  queries.rs  requests.rs  serde_utils.rs  types.rs
src/models/websocket/: enums.rs  events.rs  message.rs  mod.rs  responses.rs  types.rs
