[package]
name = "cbadv"
version = "2.0.2"
edition = "2021"
description = "Asynchronous Coinbase Advanced REST and WebSocket API"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Ohkthx/cbadv-rs"
repository = "https://github.com/Ohkthx/cbadv-rs"
keywords = ["trading", "coinbase", "coinbasepro", "coinbaseadvanced", "crypto"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE", "examples/**"]

[features]
default = []
full = ["config"]
config = ["dep:toml"]

[dependencies]
futures = "0.3.31"
reqwest = { version = "0.12.9", features = ["json"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"], default-features = false }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.11.0"
toml = { version = "0.8.19", optional = true }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
base64 = "0.22.1"
ring = "0.17.8"
openssl = "0.10.68"

[[example]]
name = "account_api"
path = "examples/account_api.rs"
required-features = ["config"]

[[example]]
name = "convert_api"
path = "examples/convert_api.rs"
required-features = ["config"]

[[example]]
name = "payment_api"
path = "examples/payment_api.rs"
required-features = ["config"]

[[example]]
name = "product_api"
path = "examples/product_api.rs"
required-features = ["config"]

[[example]]
name = "fee_api"
path = "examples/fee_api.rs"
required-features = ["config"]

[[example]]
name = "order_api"
path = "examples/order_api.rs"
required-features = ["config"]

[[example]]
name = "public_api"
path = "examples/public_api.rs"

[[example]]
name = "sandbox_api"
path = "examples/sandbox_api.rs"
required-features = ["config"]

[[example]]
name = "portfolio_api"
path = "examples/portfolio_api.rs"
required-features = ["config"]

[[example]]
name = "data_api"
path = "examples/data_api.rs"
required-features = ["config"]

[[example]]
name = "websocket"
path = "examples/websocket.rs"

[[example]]
name = "websocket_user"
path = "examples/websocket_user.rs"
required-features = ["config"]

[[example]]
name = "custom_config"
path = "examples/custom_config.rs"
required-features = ["config"]

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
opt-level = 3

[dev-dependencies]
tokio-test = "0.4.4"
assert-json-diff = "2.0.2"

[badges]
travis-ci = { repository = "ohkthx/cbadv-rs", branch = "main" }
maintenance = { status = "actively-developed" }
